--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Tables Page</title>
+    
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">  <title>Tables Page</title>
 
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -20,6 +23,7 @@
       <br>
 
       <div class="text-center">
+
         <a href="../public/survey.html"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Take Quiz</button></a>
       </div>
 
@@ -32,7 +36,7 @@
     </footer>
 
   </div>
-
+  <script type="text/javascript" src="js/materialize.min.js"></script>
 
 </body>
 </html>
