--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -36,7 +36,6 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <!-- Reservation Page -->
         
         <div class="card">
           <div class="card-header">
@@ -109,7 +108,7 @@
 
 </html>
 
-<!-- BELOW CODE IS CRITICAL. IT HANDLES HOW FORM DATA IS SENT TO OUR SERVER -->
+<!-- BELOW CODE HANDLES HOW FORM DATA IS SENT TO OUR SERVER -->
 <script type="text/javascript">
 //Modal JS
   $(function(){
@@ -129,18 +128,8 @@
            $( "#answer" ).html(  $(this).checking(choice) );      
             $('#quiz').show();
             $('#loadbar').fadeOut();
-           /* something else */
-    	}, 1500);
     });
 
-    $ans = 3;
-
-    $.fn.checking = function(ck) {
-        if (ck != $ans)
-            return 'INCORRECT';
-        else 
-            return 'CORRECT';
-    }; 
 });	
 
 //Survey results capture
