added styling to survey

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,8 +3,6 @@
 
 <head>
 <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-<title>Reservation Page</title>
-
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Bootstrap-->
@@ -13,8 +11,18 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <meta charset="UTF-8">
+    <!-- materialize -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <!-- materialize icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+       <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <title>Friend Finder - Survey</title>
 
 </head>
 
@@ -22,7 +30,7 @@
 
   <div class="container">
 
-    <div class="jumbotron">
+    <div class="jumbotron blue">
       <h1 class="text-center">
         <span class="fa fa-fire"></span> Friendify</h1>
       <hr>
@@ -30,19 +38,20 @@
       <br>
       <div class="text-center">
         <a href="../public/home.html">
-          <button class="btn btn-lg btn-default">
+          <button class="btn btn-lg btn-default cyan">
             <span class="fa fa-home"></span>
           </button>
         </a>
       </div>
     </div>
     
-<div class="row">
-    <div class="col-lg-12">
-        
-        <div class="card">
-          <div class="card-header">Answer the following:</div>
-          <div class="card-body">
+
+<div class='container'>
+    <div class='card-panel blue darken-1 col s12 center-align'>
+        <h4><strong>Answer the following:</strong></h4>
+        <div class='card-panel left-align white'>
+            <h5><strong>About You</strong></h5>
+            <br>
             <form role="form">
               <div class="form-group">
                 <label class= "active" for="name">First and Last Name (Required)</label>
@@ -173,7 +182,7 @@
                 <br>
                 <br>
                 <!-- Materialize Modal Trigger/Submit Button -->
-                <button type ="submit" data-target="modal1" class="waves-effect waves-light btn modal-trigger" id="submitBtn">Submit</button>
+                <button type ="submit" data-target="modal1" class="waves-effect waves-light btn modal-trigger cyan" id="submitBtn">Submit</button>
             </div>
         </div>
     </div>
