add styling to homepage

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,17 +6,30 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <!--Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <meta charset="UTF-8">
+    <!-- materialize -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <!-- materialize icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+       <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 
 </head>
 <body>
 
   <div class="container">
 
-    <div class="jumbotron">
+    <div class="jumbotron blue">
       <h1 class="text-center"><span class="fa fa-fire"></span> Friendify</h1>
       <hr>
       <h2 class="text-center">Take the quiz and find your new BFF!</h2>
@@ -24,7 +37,7 @@
 
       <div class="text-center">
 
-        <a href="../public/survey.html"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Take Quiz</button></a>
+        <a href="../public/survey.html"><button class="btn btn-lg btn-primary cyan"><span class="fa fa-list-alt"></span> Take Quiz</button></a>
       </div>
 
     </div>
