--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -193,7 +193,7 @@
 <footer class="footer">
     <div class="container">
         <p>
-        <p><a href="/routing/apiRoutes">API Link</a> | <a href="https://github.com/mbolters/Bamazon">Github Repo</a>
+        <p><a href="../routing/apiRoutes">API Link</a> | <a href="https://github.com/mbolters/Bamazon">Github Repo</a>
     </div>
 </footer>
 
