--- a/app/public/home.html
+++ b/app/public/home.html
@@ -44,7 +44,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/routing/apiRoutes">API Link</a> | <a href="https://github.com/mbolters/Bamazon">Github Repo</a>
+        <p><a href="../routing/apiRoutes">API Link</a> | <a href="https://github.com/mbolters/Bamazon">Github Repo</a>
       </div>
     </footer>
 
