fixing file routing links

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">  <title>Tables Page</title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">  
+    <title>Home Page</title>
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -37,14 +38,14 @@
 
       <div class="text-center">
 
-        <a href="../public/survey.html"><button class="btn btn-lg btn-primary cyan"><span class="fa fa-list-alt"></span> Take Quiz</button></a>
+        <a href="./../public/survey.html"><button class="btn btn-lg btn-primary cyan"><span class="fa fa-list-alt"></span> Take Quiz</button></a>
       </div>
 
     </div>
 
     <footer class="footer">
       <div class="container">
-        <p><a href="../routing/apiRoutes.js">API Link</a> | <a href="https://github.com/mbolters/FriendFinder">Github Repo</a>
+        <p><a href="./../routing/apiRoutes.js">API Link</a> | <a href="https://github.com/mbolters/FriendFinder">Github Repo</a>
       </div>
     </footer>
 
