--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Bootstrap-->
@@ -11,13 +10,12 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <meta charset="UTF-8">
     <!-- materialize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <!-- materialize icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
@@ -31,13 +29,12 @@
   <div class="container">
 
     <div class="jumbotron blue">
-      <h1 class="text-center">
-        <span class="fa fa-fire"></span> Friendify</h1>
+      <h1 class="text-center"><span class="fa fa-fire"></span> Friendify</h1>
       <hr>
       <h2 class="text-center">One step closer to Besties! Answer these questions...</h2>
       <br>
       <div class="text-center">
-        <a href="../public/home.html">
+        <a href="./../public/home.html">
           <button class="btn btn-lg btn-default cyan">
             <span class="fa fa-home"></span>
           </button>
@@ -192,23 +189,21 @@
 
 <footer class="footer">
     <div class="container">
-        <p><a href="../routing/apiRoutes.js">API Link</a> | <a href="https://github.com/mbolters/FriendFinder">Github Repo</a>
+        <p><a href="./../routing/apiRoutes.js">API Link</a> | <a href="https://github.com/mbolters/FriendFinder">Github Repo</a>
     </div>
 </footer>
 
 <!-- Materialize Modal Structure -->
 <div id="modal1" class="modal">
-        <div class="modal-content">
-          <h4>Meet Your New BFF</h4>
-          <h5 id="matchName"></h5>
-          <img id="matchPic" src="" alt="No Image" width = 250px>
-        </div>
-      <div class="modal-footer">
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
-      </div>
+    <div class="modal-content">
+        <h4>Meet Your New BFF</h4>
+        <h5 id="matchName"></h5>
+        <img id="matchPic" src="" alt="No Image" width = 250px>
     </div>
-
-  </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
+    </div>
+</div>
 
 <!-- Grabs information and sends it to server -->
 <script type="text/javascript">
