--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -30,7 +30,7 @@
       <h2 class="text-center">One step closer to Besties! Answer these questions...</h2>
       <br>
       <div class="text-center">
-        <a href="./../public/home.html">
+        <a href="./../public/index.html">
           <button class="btn btn-lg btn-default cyan">
             <span class="fa fa-home"></span>
           </button>
