--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
     <title>Friend Finder - Survey</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta lang="en" name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
