--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -190,7 +190,7 @@
     <div class="modal-content">
         <h4>Meet Your New BFF</h4>
         <h5 id="matchName"></h5>
-        <img id="matchPic" href="" alt="No Image" width = 250px>
+        <img id="matchPic" src="" alt="No Image" width = 250px>
     </div>
     <div class="modal-footer">
         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
@@ -243,8 +243,9 @@ $(document).ready(function() {
             console.log(data);
               //Grab the result from the AJAX post so that the best match's name and photo are displayed.
               $("#matchName").text(data.name);
-              $("#matchPic").attr("href", data.photo);
+              $("#matchPic").attr("src =", data.photo);
 
+              
           });
           // Show the modal with the best match
               $('.modal').modal();
