change route to survey.html again again again

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -30,7 +30,7 @@
 
       <div class="text-center">
 
-        <a href="/app/public/survey.html"><button class="btn btn-lg btn-primary cyan"><span class="fa fa-list-alt"></span> Take Quiz</button></a>
+        <a href="/survey"><button class="btn btn-lg btn-primary cyan"><span class="fa fa-list-alt"></span> Take Quiz</button></a>
       </div>
 
     </div>
