--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -28,7 +28,7 @@
       <h2 class="text-center">One step closer to Besties! Answer these questions...</h2>
       <br>
       <div class="text-center">
-        <a href="../public/index.html">
+        <a href="/">
           <button class="btn btn-lg btn-default cyan">
             <span class="fa fa-home"></span>
           </button>
