--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -244,7 +244,7 @@ $(document).ready(function() {
             console.log(data);
               //Grab the result from the AJAX post so that the best match's name and photo are displayed.
               $("#matchName").text(data.name);
-              $("#matchPic").attr("src =", data.photo);
+              $("#matchPic").attr("src", data.photo);
 
 
           });
