--- a/app/public/index.html
+++ b/app/public/index.html
@@ -38,7 +38,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="./../routing/apiRoutes.js">API Link</a> | <a href="https://github.com/mbolters/FriendFinder">Github Repo</a></p>
+        <p><a href="../routing/apiRoutes.js">API Link</a> | <a href="https://github.com/mbolters/FriendFinder">Github Repo</a></p>
       </div>
     </footer>
 
