--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -182,7 +182,7 @@
     
 <footer class="footer">
     <div class="container">
-        <p><a href="./../routing/apiRoutes.js">API Link</a> | <a href="https://github.com/mbolters/FriendFinder">Github Repo</a>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/mbolters/FriendFinder">Github Repo</a>
     </div>
 </footer>
 
